# ComputationalMathSolver

./: CMakeLists.txt  README.md  main.cpp
Derivation/: UnderfinedCoefficientsMethod.cpp  UnderfinedCoefficientsMethod.hpp
Integration/: Gauss.hpp  NewtonCotes.cpp  NewtonCotes.hpp
Interpolation/: Chebyshev.cpp  Chebyshev.hpp  Lagrange.cpp  Lagrange.h  Lagrange.hpp  Newton.cpp  Newton.hpp
MatrixSolver/: BackSubstitution.cpp  BackSubstitution.hpp  DenseMatrix.cpp  DenseMatrix.hpp  GaussMehtod.cpp  GaussMehtod.hpp  Triplet.cpp  Triplet.hpp
Polynomial/: Polynomial.cpp  Polynomial.hpp
Template/: Template.hpp
Utility/: Consts.cpp  Consts.hpp  Overloads.cpp  Overloads.hpp
tests/: test.hpp
